--- a/.gitignore
+++ b/.gitignore
@@ -106,4 +106,6 @@ iOSInjectionProject/
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+movies/resource/KeyInfo.plist
+
 # End of https://www.toptal.com/developers/gitignore/api/xcode,cocoapods,swift
